make book covers go 100% on mobile Fixes #131

--- a/sass/modules/_cards.scss
+++ b/sass/modules/_cards.scss
@@ -141,11 +141,11 @@ $card_padding: 0 2em 0 2em;
       margin: 0 0 ($base-spacing / 2);
       color: $base-font-color;
       img {
-        max-height: 225px;
+        //max-height: 225px;
       }
     }
     img {
-      max-height: 225px;
+      //max-height: 225px;
     }
   }
 
