--- a/sass/modules/_images.scss
+++ b/sass/modules/_images.scss
@@ -1,9 +1,13 @@
 .image-cover-small {
-  width:auto;
-  height:14em;
+  width: 100%;
+  //height: auto;
   float:left;
   margin-right:1em;
   margin-bottom:2em;
+  @include media($lg-up) {
+    width:auto;
+    height:14em;
+  }
 }
 
 .image-small {
